<resources>
    <string name="app_name">Doctro</string>
    <string name="Doctro">Doctro</string>
    <string name="motto">We care for your health</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="Username">Username</string>
    <string name="Male">Male</string>
    <string name="female">Female</string>
    <string name="Register">Register</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navdrawer">Navdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Profile">Profile</string>
    <string name="About_us">About Us</string>
    <string name="Select_age">Select age :</string>
    <string name="Gender">Gender :</string>
    <string name="OR">OR</string>
    <string name="Select_image">Select Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="Process">Process</string>
    <string name="length">Password length should be greater than 6</string>
    <string name="passwordlength"><![CDATA[Password min length >6]]></string>

</resources>
