<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#212121"
    tools:context=".Register">
    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


<!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_textview"
        android:text="Register"
        android:textSize="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/birds"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"/>-->


    <!--<ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:id="@+id/profile_img"
        android:layout_marginBottom="20dp"
        android:src="@drawable/circularimg"
        />-->
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_person_add_wblack_24dp"
            android:layout_gravity="center"
            app:civ_border_width="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:civ_border_color="@color/white"/>
    <EditText
        style="@style/edittext.username"
        android:id="@+id/username"
       />
    <EditText
        style="@style/edittext.email"
        android:id="@+id/email"
  />
    <EditText
        style="@style/edittext.password"
        android:hint="@string/passwordlength"
        android:id="@+id/password"
   />
       <!-- <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pw_length"
            android:text="@string/length"
            android:layout_marginLeft="16dp"
            android:textColor="@color/white"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Select_age"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/spinner"></Spinner>
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">



    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/select_gender"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:text="@string/Gender"/>

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:checked="true"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:text="@string/Male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

</LinearLayout>


    <Button
        style="@style/btnstyle.register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/register"/>
   <!-- <Button
        style="@style/btnstyle.login"
        android:id="@+id/login"/>-->

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
   <!-- <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gender"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male"
            android:checked="true"
            android:id="@+id/male"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/female"/>

    </RadioGroup>-->
    </LinearLayout>
    </ScrollView>
</LinearLayout>
